data/forge_javadoc/1.7.10/raw/net/minecraft/client/gui/GuiEnchantment.md
---
title: "GuiEnchantment"
description: "public class GuiEnchantment extends GuiContainer"
package: "net/minecraft/client/gui"
version: "1.7.10"
forgeBuild: "10.13.4.1614"
fetchedWith: "c4-2026-09-22"
source: "https://skmedix.github.io/ForgeJavaDocs/javadoc/forge/1.7.10-10.13.4.1614/net/minecraft/client/gui/GuiEnchantment.html"
sourceType: javadoc
---

# GuiEnchantment

**Inheritance:** java.lang.Object → net.minecraft.client.gui.Gui → net.minecraft.client.gui.GuiScreen → net.minecraft.client.gui.inventory.GuiContainer → net.minecraft.client.gui.GuiEnchantment

## Class signature

```java
public class GuiEnchantment extends GuiContainer
```

## Constructors

- `GuiEnchantment(InventoryPlayer p_i1090_1_, World p_i1090_2_, int p_i1090_3_, int p_i1090_4_, int p_i1090_5_, java.lang.String p_i1090_6_)`

## Methods

- `protected void drawGuiContainerBackgroundLayer(float p_146976_1_, int p_146976_2_, int p_146976_3_)`
- `protected void drawGuiContainerForegroundLayer(int p_146979_1_, int p_146979_2_)`
- `void func_147068_g()`
- `protected void mouseClicked(int p_73864_1_, int p_73864_2_, int p_73864_3_)`
- `void updateScreen()`

## Fields

- `float field_147069_w`
- `float field_147071_v`
- `int field_147073_u`
- `float field_147076_A`
- `float field_147080_z`
- `float field_147081_y`
- `float field_147082_x`
