data/forge_javadoc/1.8.9/raw/net/minecraft/client/gui/GuiEnchantment.md
---
title: "GuiEnchantment"
description: "public class GuiEnchantment extends GuiContainer"
package: "net/minecraft/client/gui"
version: "1.8.9"
forgeBuild: "11.15.1.2318"
fetchedWith: "c4-2026-09-22"
source: "https://skmedix.github.io/ForgeJavaDocs/javadoc/forge/1.8.9-11.15.1.2318/net/minecraft/client/gui/GuiEnchantment.html"
sourceType: javadoc
---

# GuiEnchantment

**Inheritance:** java.lang.Object → net.minecraft.client.gui.Gui → net.minecraft.client.gui.GuiScreen → net.minecraft.client.gui.inventory.GuiContainer → net.minecraft.client.gui.GuiEnchantment

## Class signature

```java
public class GuiEnchantment extends GuiContainer
```

## Constructors

- `GuiEnchantment(InventoryPlayer inventory, World worldIn, IWorldNameable p_i45502_3_)`

## Methods

- `protected void drawGuiContainerBackgroundLayer(float partialTicks, int mouseX, int mouseY)` — Args : renderPartialTicks, mouseX, mouseY
- `protected void drawGuiContainerForegroundLayer(int mouseX, int mouseY)` — Draw the foreground layer for the GuiContainer (everything in front of the items).
- `void drawScreen(int mouseX, int mouseY, float partialTicks)` — Draws the screen and all the components in it.
- `void func_147068_g()`
- `protected void mouseClicked(int mouseX, int mouseY, int mouseButton)` — Called when the mouse is clicked.
- `void updateScreen()` — Called from the main game loop to update the screen.

## Fields

- `float field_147069_w`
- `float field_147071_v`
- `int field_147073_u`
- `float field_147076_A`
- `float field_147080_z`
- `float field_147081_y`
- `float field_147082_x`
